fix: Added missing word-wrap style for notes.

--- a/src/Chrono/ClientApp/src/Features/Notes/NotePage.less
+++ b/src/Chrono/ClientApp/src/Features/Notes/NotePage.less
@@ -6,10 +6,16 @@ div.note-container {
   > div.ui.cards {
     justify-content: center;
 
-    > div.ui.card > div.content > div.header.note-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    > div.ui.card > div.content {
+      > div.header.note-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      > div.description {
+        word-wrap: break-word;
+      }
     }
   }
 
